--- a/source/scss/all.scss
+++ b/source/scss/all.scss
@@ -9,6 +9,8 @@
   list-style: none;
   font-weight: normal;
   font-size: 16px;
+  line-break: auto;
+  height: auto;
 }
 body {
   font-family: sans-serif;
